# semantic-search-course

./: .gitattributes  DOCKER_SETUP.md  README.md  docker-compose.yml  pyproject.toml
presentations/day1-keyword-search/: day1_keyword_search.html  day1_keyword_search.md
presentations/day2-rag-langgraph/: day2_rag_langgraph.html  day2_rag_langgraph.md
presentations/rag/: rag_intro.html
product-search-app/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.chainlit  README.md  chainlit_app.py  config.py  elasticsearch_client.py  index_products.py  index_products_with_embeddings.py  main.py  models.py  pyproject.toml
product-search-app/frontend/: Dockerfile  index.html
